# japanese-address-parser-nodejs

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: test.yaml  upload-npmjs.yaml
src/: lib.rs
