[package]
name = "japanese-address-parser-nodejs"
version = "0.2.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
japanese-address-parser = { version = "0.2.4", features = ["experimental"] }
napi = { version = "2.16.13", features = ["async"] }
napi-derive = "2.16.12"

[build-dependencies]
napi-build = "2.1.3"
